--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Random Card Generator</title>
 
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
     <div class="container">
+      <!-- Card -->
       <div id="card" class="heart">
         <span class="suit"></span>
         <span class="rank"></span>
         <span class="suit"></span>
       </div>
-      <button id="generatorButton">New card</button>
+      <!-- End Card -->
+
+      <!-- Controls -->
+      <div class="controls-container">
+        <div class="inputGroup">
+          <label for="width">Width (greater than 320):</label>
+          <input id="width" type="text" />
+        </div>
+        <div class="inputGroup">
+          <label for="height">Height (greater than 480):</label>
+          <input id="height" type="text" />
+        </div>
+        <p>Card will maintain a 2/3 aspect ratio</p>
+        <button id="generatorButton">New card</button>
+      </div>
+      <!-- End Controls -->
     </div>
   </body>
 </html>
